* Adjusted a bunch of NPC cock sizes to account for this. Holler if you find discrepancies!
* Becoming a herm in the intro now starts you with a seven inch cock (bigger than before).
* Streamlined Chief talk scenes (removed Next).
* Added a slew of new cock size adjectives (and reduced their prevalence in scenes). The descriptors should be slightly less repetitive now.

--------------------------------------------
             PREVIOUS VERSIONS
--------------------------------------------

Version 0.4.24
--------------
* Fixed a bug that didn't correctly remove lactation when breasts are flat.
* Changed Androgyn and Testos items so that they both reduce breast size to flat level.
* Changed Estros item so that it will increase breast size (though not as much as Bovia).

Version 0.4.23
--------------
* Fixed a bug that would occur on trying to question the lagomorphs after winning to them.

Version 0.4.22
--------------
* Changed version numbering (v is the 22nd letter, so .22)
* Added a polyfill that fixes an issue with alchemy on Internet Explorer
* Setting the Pics: On/Off in the data menu now affects the combat portraits of party/enemies
* More code cleanup and typo fixes, courtesy of CalmKhaos
* CSS style cleanup, courtesy of hindmanj on github

Version 0.4u
------------
* New scene: Terry fucks player vagina. Variations for horsecock. Written by LD and QB.

* More typos fixed (Fera). Thanks CK!
* Fixed a bug in the pregnancy code, making pregnancies not be correctly detected
* A real clever piece of code added by ElAcechador on Github, that allows you to see what alchemical recipes you can learn when talking to an alchemy NPC like Rosalin. Unknown recipes will be lined out in green, known recipes will be in blue
* Also by ElAcechador: You can now batch brew alchemy items. You can only do so once you've learned them (NPCs such as Rosalin and Jeanne will still brew single potions)