@@ -14,6 +14,7 @@ Version 0.4.25
 * Becoming a herm in the intro now starts you with a seven inch cock (bigger than before).
 * Streamlined Chief talk scenes (removed Next).
 * Added a slew of new cock size adjectives (and reduced their prevalence in scenes). The descriptors should be slightly less repetitive now.
+* Added a review/redo option to character creation in the intro.
 
 --------------------------------------------
              PREVIOUS VERSIONS
